实现combineReducers，根据路由配置循环生成菜单

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -29,3 +29,15 @@ html, body {
     }
   }
 }
+
+.app {
+  display: flex;
+  .main-left {
+    width: 10%;
+    height: 100%;
+  }
+  .main-right {
+    flex: 1;
+    height: 100%;
+  }
+}
